[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,8 @@
 <html>
     <body>
-        <h6>nothing to dhow sample</h6>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <h3>nothing to dhow sample</h3>
     </body>
 </html>
