--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Kannan</title>
+        <meta name="viewport" content="width-device-width, initial-scale-1"/>
+    </head>
     <body>
         <div>
             <a href="/">Home</a>
