--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,6 +7,6 @@
         <div>
             <a href="/">Home</a>
         </div>
-        <h3>nothing to dhow sample</h3>
+        <h3>nothing to show sample</h3>
     </body>
 </html>
