[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,11 +2,20 @@
     <head>
         <title>Kannan</title>
         <meta name="viewport" content="width-device-width, initial-scale-1"/>
-    </head>
+         <style>
+        .container
+        {
+            padding-left:40px;
+            padding-right:40px;
+        }
+    </style>
+   
     <body>
+        <div class="ontainer">
         <div>
             <a href="/">Home</a>
         </div>
         <h3>nothing to show sample</h3>
+        </div>
     </body>
 </html>
