--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         {
             padding-left:40px;
             padding-right:40px;
-            color:blue;
+            padding-top:90px;
         }
     </style>
    
