[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,14 +5,15 @@
          <style>
         .container
         {
-            padding-left:1000px;
+            padding-left:40px;
             padding-right:40px;
             padding-top:90px;
+            color:red;
         }
     </style>
    
     <body>
-        <div class="ontainer">
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
