--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,16 +2,8 @@
     <head>
         <title>Kannan</title>
         <meta name="viewport" content="width-device-width, initial-scale-1"/>
-         <style>
-        .container
-        {
-            padding-left:40px;
-            padding-right:40px;
-            padding-top:90px;
-            color:red;
-        }
-    </style>
-   
+        <link href="/ui/style.css" rel="stylesheet" />
+   </head>
     <body>
         <div class="container">
         <div>
