--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>Kannan</title>
+        <meta name="viewport" content="width-device-width, initial-scale-1"/>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
