--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div id='main-text' class="center text-big bold">
             kannan
         </div>
+        This button<button id='counter'>click me!</button>has been clicked<span id='count'>0</span>times.
         <script>
             alert('hi,this is a sample script');
         </script>
