[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,33 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div id='madi' class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://pbs.twimg.com/profile_images/893083872216231938/-TeW1kcQ_400x400.jpg" class="img-medium"/>
         </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            kannan
+        <h1>Personal</h1>
+        <!--<br>-->
+        <div>
+        This is kannan
         </div>
-        This button<button id='counter'>click me!</button>has been clicked<span id='count'>0</span>times.
-        <script>
-            alert('hi,this is a sample script');
-        </script>
+        <hr/>
+        <!--<div id='main-text' class="center text-big bold">-->
+           // kannan
+       <!-- </div>-->
+       
+            <h1>Professional</h1>
+            <div>
+                Student 
+            </div>
+       <hr/>
+       <div class="footer">
+           This button<button id='counter'>click me!</button>has been clicked<span id='count'>0</span>times.
+           <br/>
+       </div>
+        </div>
+       <!-- <script>-->
+          //  alert('hi,this is a sample script');
+      <!--  </script>-->
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
