--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div class="container">
-        <div id='madi' class="center">
+       <!-- <div id='madi' class="center">-->
+       <div class="center">
             <img src="https://pbs.twimg.com/profile_images/893083872216231938/-TeW1kcQ_400x400.jpg" class="img-medium"/>
         </div>
         <h1>Personal</h1>
