[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
         </div>
         </div>
        <!-- <script>-->
-          //  alert('hi,this is a sample script');
+          <!-- alert('hi,this is a sample script');-->
       <!--  </script>-->
         <script type="text/javascript" src="/ui/main.js">
         </script>
