--- a/ui/index.html
+++ b/ui/index.html
@@ -28,11 +28,11 @@
            This button<button id='counter'>click me!</button>has been clicked<span id='count'>0</span>times.
            <hr/>
           <input type="text" id="name" placeholder="name"></input>
-          <input type="submit" value="submit"></input>
-          <ul>
-              <li>name1</li>
-              <li>name2</li>
-              <li>name3</li>
+          <input type="submit" value="submit" id="submit_btn"></input>
+          <ul id="namelist">
+              <!--<li>name1</li>-->
+              <!--<li>name2</li>-->
+             <!-- <li>name3</li>-->
           </ul>
        </div>
         </div>
