--- a/ui/index.html
+++ b/ui/index.html
@@ -27,9 +27,9 @@
        <div class="footer">
            This button<button id='counter'>click me!</button>has been clicked<span id='count'>0</span>times.
            <hr/>
-          <input type="text" id="name" placeholder="name"></input>
-          <input type="submit" value="submit" id="submit_btn"></input>
-          <ul id="namelist">
+          <input type="text" id='name' placeholder="name"></input>
+          <input type="submit" value="submit" id='submit_btn'></input>
+          <ul id='namelist'>
               <!--<li>name1</li>-->
               <!--<li>name2</li>-->
              <!-- <li>name3</li>-->
